syntax = "proto3";

package pb;

import "customer.proto";

option go_package = "github.com/slamchillz/xchange/pb";

message CreateCustomerRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone_number = 4;
    string password = 5;
    string confirm_password = 6;
}

message CreateCustomerResponse {
    Customer customer = 1;
}
