syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_customer.proto";
import "rpc_login_customer.proto";
import "rpc_create_swap.proto";

option go_package = "github.com/slamchillz/xchange/pb";

service Xchange {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {
    option (google.api.http) = {
      post: "/v1/users/signup"
      body: "*"
    };
  }
  rpc LoginCustomer(LoginCustomerRequest) returns (LoginCustomerResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }
  rpc CoinSwap(CoinSwapRequest) returns (CoinSwapResponse) {}
}
